# sing-box-desktop

./: .gitignore  IMPROVEMENT_PLAN.md  README.en.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: proxy-tun-lifecycle-plan.md  test-tracking-roadmap-implementation.md  test-tracking-roadmap-implementation.xlsx
scripts/: fetch-singbox.js  prepare-installer.js  process_icon.py  resize_icon.py  svg_to_png.mjs  sync-version.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/rule-sets/: geosite-cn.srs  geosite-geolocation-noncn.srs
src-tauri/src/: auto_update.rs  cn_direct.rs  commands.rs  config.rs  lib.rs  main.rs  proxy.rs  rules.rs  singbox.rs  stats.rs  subscription.rs  tun.rs  types.rs  updater.rs
src-tauri/ui/: index.html  manifest.webmanifest  sw.js
src-tauri/ui/assets/: browser-ponyfill-vz_jtj64.js  chart-lib-ByDfIL_g.js  en-0PR342cN.js  index-C9L_vfV_.js  index-DfZ88PCr.css  ru-n0Zzvu0h.js  vi-DUQHN8fy.js  zh-cn-D-A6ITx6.js  zh-tw-BU7lBlIu.js
src/components/: EmptyState.vue  Sidebar.vue  Titlebar.vue
src/composables/: useDelayedRefresh.ts  useTemporaryFlag.ts
src/i18n/: index.ts
src/i18n/locales/: en.ts  zh-CN.ts
src/router/: index.ts
src/stores/: app.ts
src/styles/: main.css
src/utils/: clipboard.ts  format.ts  tauri.ts
src/views/: Connections.vue  Home.vue  Logs.vue  Nodes.vue  Rules.vue  Settings.vue  Stats.vue  Subscriptions.vue
