[package]
name = "skylark"
version = "0.3.6"
description = "Skylark — cross-platform (Windows / macOS) GUI proxy client powered by sing-box"
authors = ["radium"]
edition = "2021"

[lib]
name = "skylark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"], default-features = false }
base64 = "0.22"
sha2 = "0.10"
url = "2"
anyhow = "1"
log = "0.4"
regex = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2"
zip = "2"
flate2 = "1"
tar = "0.4"
futures-util = "0.3"
sys-locale = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "securitybaseapi", "winnt", "shellapi", "winuser", "psapi", "handleapi", "wininet", "wincon", "consoleapi"] }
winreg = "0.52"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
